<resources>
    <string name="app_name">NotiDroid</string>
    <string name="title_item_detail">Detalle</string>
    <string name="title_activity_login">Iniciar sesión</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión o registrarse</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="welcome">"Bienvenido"</string>
    <string name="invalid_username">El usuario no es válido</string>
    <string name="complete_fields">Completa todos los campos</string>
    <string name="login_failed">"Inicio de sesión fallido"</string>
    <string name="login_success">Inicio de sesión exitoso</string>
    <string name="invalid_credentials">Credenciales incorrectas</string>
    <string name="register_success">Registro exitoso</string>
    <string name="register_failed">Registro fallido</string>
    <string name="user_already_exists">El usuario existe, inicie sesión</string>
    <string name="login_tip">Ya tienes cuenta? inicia sesión</string>
    <string name="register_button">Registrarse</string>
    <string name="password_incorrect">Contraseña incorrecta</string>
    <string name="repassword_hint">Repite la contraseña</string>
    <string name="title_login_text">Inicia sesión para ver las ultimas noticias</string>
    <string name="title_text_register">Regístrate para ver las últimas noticias</string>
    <string name="password_hint">Contraseña</string>


    <!-- Preference  -->
    <string name="title_activity_settings">Preferencias</string>

    <string name="category_language">Idioma</string>
    <string name="preference_language">Seleccione un idioma</string>

    <string name="category_notifications">Notificaciones</string>
    <string name="preference_notifications">Mostrar notificaciones</string>


    <string name="name_title_favourite">Favoritos</string>
    <string name="name_title_explore">Explorar</string>
    <string name="name_title_localsnews">Noticias locales</string>

    <!-- Context menu -->
    <string name="add_favourites">Agregado a favoritos</string>
    <string name="search_hint">Buscar una noticia</string>
    <string name="shared">Compartido</string>
    <string name="share_context_menu">Compartir</string>
    <string name="favourite_context_menu">Agregar a favoritos</string>
    <string name="remove_favourite_context_menu">Eliminar de favoritos</string>
    <string name="query_hint">Buscar noticias</string>
    <string name="share_title">Compartir via</string>
    <string name="check_email">Verifique su email</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="see_web">Ver página web</string>


</resources>